--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,3 +23,34 @@ jobs:
       - run: npm i
       - run: npm run build
 
+  deploy:
+    needs: test-build
+    runs-on: ubuntu-lates
+
+    strategy:
+      matrix:
+        node-version: [16.x]
+    steps:
+      - name: Build app on VM
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USERNAME }}
+          password: ${{ secrets.PASSWORD }}
+          port: ${{ secrets.PORT }}
+          script: |
+            eval "$(ssh-agent -s)"
+            ssh-add ~/.ssh/vm_senpro_modul2_36
+            echo "Cek folder project";
+            [ ! -d "${HOME}/senpro/482959/modul02/senpro-github-action/" ] &&
+            {
+              echo "Repository belum di-clone. Cloning...";
+              mkdir -p ~/senpro/482959/modul02;
+              git clone git@github.com:Nantapranawa/senpro-github-action.git;
+            } ||
+            {
+              echo "Repository sudah ada. Building...";
+              cd ~/senpro/482959/modul02/senpro-github-action;
+              git restore .;
+              git pull origin main;
+            }
