--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,6 +46,7 @@ jobs:
             {
               echo "Repository belum di-clone. Cloning...";
               mkdir -p ~/senpro/482959/modul02;
+              cd ~/senpro/482959/modul02;
               git clone git@github.com:Nantapranawa/senpro-github-action.git;
             } ||
             {
